# lazy-dns

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  dns_server.rs  geoip.rs  main.rs  records.rs  resolver.rs
