[package]
name = "lazy-dns"
version = "1.0.4"
edition = "2024"

[[bin]]
name = "lazy-dns"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
fancy-log = "0.1"
hickory-proto = "0.25"
lazy-motd = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
dirs = "5"
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"