[package]
name = "lazy-dns"
version = "1.0.10"
edition = "2024"
description = "A lazy DNS server with GeoIP routing. Only SOA, NS, A, AAAA, CNAME, MX, and TXT are supported; everything else is dropped, by design."
license = "MIT"
repository = "https://github.com/canmi21/lazy-dns"
readme = "README.md"
keywords = ["network", "server", "geoip", "ip", "dns"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "lazy-dns"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
fancy-log = "0.1"
hickory-proto = "0.25"
lazy-motd = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
dirs = "5"
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
chrono = "0.4"